--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <header>
-            <h1>WebAgency</h1>
-            <nav>
-                <ul>
-                    <li>
+        
+        <header class="header">
+            <h1 class="hero-title logo">WebAgency</h1>
+            <nav class="main-nav nav-lin">
+                <ul class="services-list nav-link">
+                    <li class="nav-link">
                         <a href="#about">О нас</a>
                     </li>
                     <li>
@@ -33,65 +34,65 @@
             </nav>
         </header>
 
-        <section>
+        <section class="hero-section">
             <h2>Создаем современные и удобные сайты</h2>
             <p>Профессиональная веб-разработка для вашего бизнеса</p>
-            <button>Заказать сайт</button>
+            <button class="submit">Заказать сайт</button>
         </section>
 
-        <section>
+        <section class="service-item">
             <h2>О нас</h2>
             <p>
                 Мы - команда профессионалов, разрабатывающая стильные и
                 функциональные сайты.
             </p>
-            <img src="assets/team.jpg" alt="Наша команда" />
+            <img class="portfolio-item img" src="assets/team.jpg" alt="Наша команда" />
         </section>
 
-        <section>
+        <section class="services-section">
             <h2>Наши услуги</h2>
-            <ul>
-                <li>Дизайн и разработка</li>
-                <li>SEO-оптимизация</li>
-                <li>Поддержка и обслуживание</li>
-                <li>Аналитика и маркетинг</li>
+            <ul class="portfolio-grid">
+                <ol class="service-item">Дизайн и разработка</ol>
+                <ol class="service-item">SEO-оптимизация</ol>
+                <ol class="service-item">Поддержка и обслуживание</ol>
+                <ol class="service-item">Аналитика и маркетинг</ol>
             </ul>
         </section>
 
-        <section>
+        <section class="portfolio-item portfolio-grid">
             <h2>Наши работы</h2>
             <div>
-                <div>
+                <div class="class="hero-section">
                     <img src="assets/project1.webp" alt="Проект 1" />
                 </div>
-                <div>
+                <div class="class="hero-section">
                     <img src="assets/project2.png" alt="Проект 2" />
                 </div>
-                <div>
+                <div class="class="hero-section">
                     <img src="assets/project3.png" alt="Проект 3" />
                 </div>
             </div>
         </section>
 
-        <section>
+        <section class="form-textarea">
             <h2>Отзывы клиентов</h2>
             <blockquote>
                 <p>"Отличная работа! Сайт сделали быстро и качественно."</p>
-                <cite>— Иван Петров, CEO</cite>
+                <cite class="testimonial-author">— Иван Петров, CEO</cite>
             </blockquote>
         </section>
 
-        <footer>
+        <footer class="footer-section">
             <h2>Контакты</h2>
             <p>
                 Email:
-                <a href="mailto:contact@webagency.com">contact@webagency.com</a>
+                <a class="contact-info a" href="mailto:contact@webagency.com">contact@webagency.com</a>
             </p>
             <p>
                 Телефон:
                 <a href="tel:+79991234567">+7 999 123 45 67</a>
             </p>
-            <form>
+            <form class="contactclass="hero-section">
                 <input type="text" name="name" placeholder="Ваше имя" />
                 <input type="email" name="email" placeholder="Ваш email" />
                 <textarea
@@ -102,3 +103,4 @@
         </footer>
     </body>
 </html>
+
